# wazero

./: .gitignore  ARM64-SECURE-MODE-VALIDATION.md  CONTRIBUTING.md  Cargo.toml  Makefile  RATIONALE.md  README.md  SE-ROADMAP-REVIEW-APRIL-5-2026-1429.md  SE-ROADMAP.md  SUPPORT_MATRIX.md  THREAT_MODEL.md  builder.go  config.go  config_test.go  fault-to-trap-implementation_plan.md  fault-to-trap-task.md  fix_chains.py  fix_e2e.py  fix_errno.py  fix_errors.py  fix_final.py  fix_imports.py  fix_imports2.py  fix_logging.py  fix_make.py  fix_module_instance.py  fix_remaining.py  fix_remaining2.py  fix_require.py  fix_store.py  fix_stuff.py  fix_test_tails.py  fix_wasm_tests.py  go-mem-jit-implementation-plan.md  jit-unwind-trap-implementation_plan.md  lefthook.yml  phase-2-implementation_plan.md  phase-2-tasks.md  runtime.go  runtime_test.go  (+2 more)
.github/: copilot-instructions.md
api/: error.go
examples/: README.md
experimental/: fuel.go  fuel_integration_test.go  fuel_test.go  hardening_example_test.go  host_boundary_fuzz_test.go  importresolver.go  importresolver_observer.go  importresolver_observer_test.go  (+23 more)
razero/: Cargo.toml
razero-compiler/: AOT_PACKAGING_ABI.md  Cargo.toml
razero-compiler/src/: aot.rs  call_engine.rs  engine.rs  engine_cache.rs  entrypoint_amd64.rs  entrypoint_arm64.rs  entrypoint_other.rs  hostmodule.rs  isa_amd64.rs  isa_arm64.rs  isa_other.rs  lib.rs  linker.rs  memmove.rs  module_engine.rs  runtime_state.rs  runtime_support.rs  sighandler_linux.rs  sighandler_linux_amd64.S  sighandler_linux_amd64.rs  sighandler_linux_arm64.S  sighandler_linux_arm64.rs  sighandler_stub.rs
razero-compiler/src/backend/: abi.rs  compiler.rs  compiler_lower.rs  host_call.rs  machine.rs  mod.rs  vdef.rs
razero-compiler/src/backend/isa/: mod.rs
razero-compiler/src/backend/isa/amd64/: abi.rs  abi_entry.S  abi_entry.rs  abi_entry_preamble.rs  abi_host_call.rs  cond.rs  ext.rs  instr.rs  instr_encoding.rs  lower_constant.rs  lower_mem.rs  machine.rs  machine_pro_epi_logue.rs  machine_regalloc.rs  machine_vec.rs  mod.rs  operands.rs  reg.rs  stack.rs
razero-compiler/src/backend/isa/arm64/: abi.rs  abi_entry.S  abi_entry.rs  abi_entry_preamble.rs  abi_host_call.rs  cond.rs  instr.rs  instr_encoding.rs  lower_constant.rs  lower_instr.rs  lower_instr_operands.rs  lower_mem.rs  machine.rs  machine_pro_epi_logue.rs  machine_regalloc.rs  machine_relocation.rs  mod.rs  reg.rs  unwind_stack.rs
razero-compiler/src/backend/regalloc/: api.rs  mod.rs  reg.rs  regalloc.rs  regset.rs
razero-compiler/src/frontend/: lower.rs  misc.rs  mod.rs  sort_id.rs
razero-compiler/src/ssa/: basic_block.rs  basic_block_sort.rs  builder.rs  cmp.rs  funcref.rs  instructions.rs  mod.rs  pass.rs  pass_blk_layouts.rs  pass_cfg.rs  signature.rs  types.rs  vs.rs
razero-compiler/src/wazevoapi/: debug_options.rs  exitcode.rs  mod.rs  offsetdata.rs  perfmap.rs  pool.rs  ptr.rs  queue.rs  resetmap.rs
razero-interp/: Cargo.toml
razero-interp/src/: compiler.rs  engine.rs  format.rs  interpreter.rs  lib.rs  operations.rs  signature.rs
razero/benches/: secbench.rs
razero/examples/: hello_world.rs
razero/src/: assemblyscript.rs  builder.rs  cache.rs  config.rs  ctx_keys.rs  filecache.rs  lib.rs  logging.rs  runtime.rs
razero/src/api/: error.rs  features.rs  mod.rs  wasm.rs
razero/src/experimental/: checkpoint.rs  close_notifier.rs  compilation_workers.rs  experimental.rs  features.rs  fuel.rs  fuel_observer.rs  host_call_policy.rs  host_call_policy_observer.rs  import_resolver.rs  import_resolver_observer.rs  listener.rs  memory.rs  mod.rs  snapshotter.rs  table.rs  time_provider.rs  trap.rs  yield.rs  yield_observer.rs  yield_policy.rs  yield_policy_observer.rs
razero/tests/: compiler_public_runtime.rs  example_smoke_parity.rs  experimental_runtime_parity.rs  experimental_surface_parity.rs  spec_harness_parity.rs
(+156 files in other folders)
