[package]
name = "razero-compiler"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
libc = "0.2"
object = { version = "0.36", features = ["write", "elf"] }
razero-platform.workspace = true
razero-wasm.workspace = true

[dev-dependencies]
razero-decoder.workspace = true
razero-features.workspace = true
