[package]
name = "razero-interp"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
razero-wasm = { workspace = true }

[dev-dependencies]
razero-decoder = { workspace = true }
razero-features = { workspace = true }
