[package]
name = "razero"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
razero-features = { workspace = true }
razero-wasm = { workspace = true }
razero-decoder = { workspace = true }
razero-compiler = { workspace = true }
razero-interp = { workspace = true }
razero-secmem = { workspace = true }

[features]
default = []
filecache = []

[dev-dependencies]
criterion = "0.5"
razero-platform = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "secbench"
harness = false
